--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </p>
   <pre xml:space="preserve" id="email" style="font-size: 12px">
 
-shubhtuls AT {cmu.edu (preferred), fb.com}
+shubhtuls AT {cmu.edu}
   </pre>
   <script xml:space="preserve" language="JavaScript">
   hideblock('email');
