--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@ hideblock('neurips21nersBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="neurips21nrns" data-selected="n">
+<div class="paper" id="neurips21nrns" data-selected="y">
 <img class="paper" src="figures/neurips21nrns.jpg" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">NeRS: Neural Reflectance Surfaces for Sparse-view 3D Reconstruction in the Wild</b> <br/> 
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">No RL, No Simulation: Learning to Navigate without Navigating</b> <br/> 
 Meera Hahn, Devendra Chaplot, <strong>Shubham Tulsiani</strong>, Mustafa Mukadam, James M. Rehg, Abhinav Gupta <br/> 
 NeurIPS, 2021 <br/> 
 <a href="https://arxiv.org/pdf/2110.09470">pdf </a>  &nbsp <a href="https://meerahahn.github.io/nrns/">project page </a>  &nbsp <a href="javascript:toggleblock('neurips21nrnsAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('neurips21nrnsBib')">bibtex </a>  &nbsp <a href="https://github.com/meera1hahn/NRNS/">code </a> </p>
