--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ We do not have any short-term positions at this time.
 
 
 <div class="section">
-<h2> Publications (<a href="javascript:hideunselected()">selected</a> | <a href="javascript:showunselected()">all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2021<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2021<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
 <div class="paper" id="neurips21ners" data-selected="y">
 <img class="paper" src="figures/neurips21ners.gif" />
@@ -1044,7 +1044,7 @@ hideblock('uist13colorsBib');
 <!--------------------------------------------------------------------------->
 
  <script language="javascript" type="text/javascript" xml:space="preserve">
-hideunselected()</script>
+showselected()</script>
 
 <!--------------------------------------------------------------------------->
 <!--- TEMPLATE
