--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@ We do not have any short-term positions at this time.
 
 
 <div class="section">
+<h2> Teaching</h2>
+<br>
+<a href="https://learning3d.github.io/">16-889: Learning for 3D Vision</a>. Spring 2022
+<br>
+</div>
+
+<div class="section">
 <h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2021<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
 <div class="paper" id="neurips21ners" data-selected="y">
@@ -1071,13 +1078,6 @@ BIBTEX
 -->
 <!--------------------------------------------------------------------------->
 
-</div>
-
-<div class="section">
-<h2> Teaching</h2>
-<br>
-16-889: Learning for 3D Vision. Spring 2022
-<br>
 </div>
 
 </body>
