--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ hideblock('neurips21nersBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="neurips21nrns" data-selected="y">
+<div class="paper" id="neurips21nrns" data-selected="n">
 <img class="paper" src="figures/neurips21nrns.jpg" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">No RL, No Simulation: Learning to Navigate without Navigating</b> <br/> 
 Meera Hahn, Devendra Chaplot, <strong>Shubham Tulsiani</strong>, Mustafa Mukadam, James M. Rehg, Abhinav Gupta <br/> 
